# i3wm-mcp

./: .gitignore  .pre-commit-config.yaml  ATTRIBUTION.md  LICENSE  README.md  glama.json  pyproject.toml
.github/workflows/: ci.yml
scripts/: rubric_check.py
src/i3wm_mcp/: __init__.py  __main__.py  backend.py  formatting.py  models.py  server.py
tests/: conftest.py  test_backend.py  test_formatting.py  test_main.py  test_server.py
