# Build + tooling manifest for the i3wm-mcp server.
# The server is a small, self-contained MCP package; dependencies are pinned to
# floor versions that expose the APIs we rely on (FastMCP structured output,
# i3ipc asyncio, pydantic v2).
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "i3wm-mcp"
version = "0.1.0"
description = "A Model Context Protocol server for the i3 (and Sway) window manager, with tool definitions tuned for high tool-definition-quality scores."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Krzysztof Rudnicki" }]
keywords = ["mcp", "i3", "i3wm", "sway", "window-manager", "i3ipc", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Desktop Environment :: Window Managers",
]
dependencies = [
    "mcp>=1.12",
    "i3ipc>=2.2.1",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[project.scripts]
i3wm-mcp = "i3wm_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/kuhyx/i3wm-mcp"
Repository = "https://github.com/kuhyx/i3wm-mcp"
"Upstream (derived from)" = "https://github.com/caninja/i3wm-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/i3wm_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
# Practical, strict-but-not-noisy rule set: pyflakes, pycodestyle, isort,
# bugbear, pyupgrade, comprehensions, simplify.
select = ["E", "F", "I", "B", "UP", "C4", "SIM", "W"]

[tool.mypy]
python_version = "3.10"
packages = ["i3wm_mcp"]
mypy_path = "src"
strict = true
# i3ipc ships partial type information; don't fail on its internals.
[[tool.mypy.overrides]]
module = ["i3ipc.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=i3wm_mcp --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
branch = true
source = ["i3wm_mcp"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
